--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Crypto <br>
-                      Currency
+                      Bitcoin <br>
+                      
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      done
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -130,7 +130,7 @@
                       Currency
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      done
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
@@ -157,7 +157,7 @@
                       Currency
                     </h1>
                     <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
+                      done
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
